@@ -2,6 +2,7 @@
 
 	* Moved all source code to src/.
 	* Fix query-mode.
+	* Quadruple and unify the maximum allowable line size.
 
 0.2 Bertrand Janin <b@janin.com> (2013-05-03)
 
